--- a/RNA-Seq Analysis/analysis.Rmd
+++ b/RNA-Seq Analysis/analysis.Rmd
@@ -15,7 +15,7 @@ output:
 ---
 
 ```{r, message=F, warning=F}
-library(SummarizedExperiment)
+library(recount)
 library(tidyverse)
 ```
 
@@ -94,9 +94,9 @@ samples contain only regions `BA09` and `BA41` while the Autism group contains
 those two regions and `BA22`. It is unclear whether this will have a significant
 impact on analysis, but I wanted to point it out.
 
-## Preview of counts
+## Preview of counts data
 
-The following is a table of counts for six genes, not yet normalized.
+The following is a table of __base pair__ counts for a small subset of genes.
 
 ```{r}
 counts_tbl <- assay(rse_gene) %>%
@@ -107,12 +107,40 @@ head(counts_tbl)
 ```
 
 There are many more rows, but I only show a few here so that we can get an idea
-of what the count data look like. Each number in the table represents how many
-times we saw a gene in a sample. For example, in the first row of the first
-column, we counted 12,091 instances of the TSPAN6 gene (ID ENSG00000000003.14)
-when we executed the run `SRR309133` on a sample of cells taken from the
-temporal cortex of a brain with Autism.
+of what the counts data look like. Each number in the table represents... TODO:
+what does the base-pair count represent?
+
+```{r}
+head(assay(scale_counts(rse_gene)))
+```
+
+- Why do we have matching base pair counts, instead of matching read counts?
+- How did we match up reads to genes in the first place?
+    - Since reads won't match up completely to genes to due mutations, do we count
+      the number of matching base pairs of the read to the gene?
+    - What if we matched wrong?
+
+
+## Differential expression analysis
+
+
 
 [1]: https://linsalrob.github.io/ComputationalGenomicsManual/Databases/SRA.html
 [2]: http://useast.ensembl.org/info/genome/stable_ids/index.html
 [3]: http://useast.ensembl.org/Homo_sapiens/Gene/Summary?db=core;g=ENSG00000000003;r=X:100627108-100639991
+
+## Helpful learning links accompanied with questions
+
+[Read length, single vs paired end, depth of coverage](https://systemsbiology.columbia.edu/genome-sequencing-defining-your-experiment)
+ 
+- Are _fragment_ and _read_ interchangeable?
+- Why do we do paired-end reading when we can just do single-end reading and
+  take the reverse complement of each read? Is it because paired-end reading
+  gives us redundancy, which is important for giving higher quality (i.e. lower
+  error)?
+
+[Beginner's guide to DESeq2](https://bioc.ism.ac.jp/packages/2.14/bioc/vignettes/DESeq2/inst/doc/beginner.pdf)
+
+[RNA-Seq workflow](https://bioconductor.org/packages/release/workflows/vignettes/rnaseqGene/inst/doc/rnaseqGene.html#introduction)
+
+[DESeq2 paper](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-014-0550-8)
